added files from first week of class

--- a/InClassAug23.html
+++ b/InClassAug23.html
@@ -11,6 +11,9 @@
     <head>
         <!-- The title that appears on the tab -->
         <title>HTML Example</title>
+        <style>
+            
+        </style>
     </head>
     <!-- This block -->
     <body style="border-width: 10px;border-style: solid;border-color: black;margin: 50px;padding:20px">
